# packet-profiler

./: .gitignore  .semgrep.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  security.yml
docs/: design.md
src/profiler/: __init__.py  ai_analysis.py  capture.py  cli.py  fingerprint.py  parser.py  profiler.py  report.py  storage.py  wifi.py
tests/: test_ai_analysis.py  test_parser.py  test_report.py  test_smoke.py  test_wifi.py
